Frontend/parth-traders/src/app/admin/add-product/add-product.component.css
:root {
  --primary-color: #3a57e8;
}

body {
  background-color: #72bdef21;
}

.primary-color {
  background-color: var(--primary-color);
  border: none;
}

.primary-color:hover {
  background-color: #3a57e8de;
  border: none;
}

.cancel-button {
  background-color: #d41900c9;
  border: none;
}

.cancel-button:hover,
.cancel-button:focus {
  background-color: #d41900ec;
  opacity: 80%;
  border: none;
}

.form-control:focus {
  border: 1px solid #ced4da;
  box-shadow: 0 0 0 0;
}

.card-header {
  background-color: var(--primary-color);
  color: white;
  padding: 0.15rem 1.25rem;
}

.form-design {
  border: 1px solid #767b7e59;
  margin: 10px 10px;
  border-radius: 5px;
}

.btn:focus {
  color: #fff;
  box-shadow: none;
}

.row {
  margin-top: 5px;
  margin-right: 0px;
}

::placeholder {
  margin-left: 3px;
}

